AUTOMAKE_OPTIONS = foreign

AM_CPPFLAGS = -DDB_COMPDEBUG -Wall -Wno-sign-compare

CLEANFILES = *.rpo

lib_LIBRARIES = \
    libbase.a

libbase_a_SOURCES = \
    zmAlarmFrame.cpp \
    zmApp.cpp \
    zmConfig.cpp \
    zmConnection.cpp \
    zmController.cpp \
    zmDb.cpp \
    zmEncoder.cpp \
    zmFeedBase.cpp \
    zmFeedConsumer.cpp \
    zmFeedFrame.cpp \
    zmFeedProvider.cpp \
    zmFfmpeg.cpp \
    zmListener.cpp \
    zmMemoryIO.cpp \
    zmMemoryIOV1.cpp \
    zmMotionData.cpp \
    zmMotionFrame.cpp \
    zmRegion.cpp \
    zmSignal.cpp \
    zmStream.cpp \
    zmZone.cpp

pkginclude_HEADERS = \
    countedPtr.h \
    linkedPtr.h \
    zmAlarmFrame.h \
    zmApp.h \
    zmConfigDefines.h \
    zmConfig.h \
    zmConnection.h \
    zmController.h \
    zmDb.h \
    zmEncoder.h \
    zmFeedBase.h \
    zmFeedConsumer.h \
    zmFeedFrame.h \
    zmFeedProvider.h \
    zmFfmpeg.h \
    zm.h \
    zmListener.h \
    zmMemoryIO.h \
    zmMemoryIOV1.h \
    zmMotionData.h \
    zmMotionFrame.h \
    zmRegion.h \
    zmSignal.h \
    zmStream.h \
    zmZone.h
