AUTOMAKE_OPTIONS = foreign

AM_CPPFLAGS = -DDB_COMPDEBUG -Wall -Wno-sign-compare

CLEANFILES = *.rpo

lib_LIBRARIES = \
    libbase.a

libbase_a_SOURCES = \
    ozAlarmFrame.cpp \
    ozApp.cpp \
    ozConfig.cpp \
    ozConnection.cpp \
    ozController.cpp \
    ozEncoder.cpp \
    ozFeedBase.cpp \
    ozFeedConsumer.cpp \
    ozFeedFrame.cpp \
    ozFeedProvider.cpp \
    ozFfmpeg.cpp \
    ozListener.cpp \
    ozMemoryIO.cpp \
    ozMemoryIOV1.cpp \
    ozMotionData.cpp \
    ozMotionFrame.cpp \
    ozRegion.cpp \
    ozSignal.cpp \
    ozStream.cpp \
    ozZone.cpp

pkginclude_HEADERS = \
    countedPtr.h \
    linkedPtr.h \
    ozAlarmFrame.h \
    ozApp.h \
    ozConfigDefines.h \
    ozConfig.h \
    ozConnection.h \
    ozController.h \
    ozEncoder.h \
    ozFeedBase.h \
    ozFeedConsumer.h \
    ozFeedFrame.h \
    ozFeedProvider.h \
    ozFfmpeg.h \
    oz.h \
    ozListener.h \
    ozMemoryIO.h \
    ozMemoryIOV1.h \
    ozMotionData.h \
    ozMotionFrame.h \
    ozRegion.h \
    ozSignal.h \
    ozStream.h \
    ozZone.h
