AUTOMAKE_OPTIONS = foreign

AM_CPPFLAGS = -DDB_COMPDEBUG -Wall -Wno-sign-compare

CLEANFILES = *.rpo

lib_LIBRARIES = \
    libprotocols.a

libprotocols_a_SOURCES = \
	zmHttp.cpp \
	zmHttpConnection.cpp \
	zmHttpController.cpp \
	zmHttpSession.cpp \
	zmHttpStream.cpp \
	zmRtmp.cpp \
	zmRtmpAmf.cpp \
	zmRtmpConnection.cpp \
	zmRtmpController.cpp \
	zmRtmpRequest.cpp \
	zmRtmpSession.cpp \
	zmRtmpStream.cpp \
	zmRtsp.cpp \
	zmRtspConnection.cpp \
	zmRtspController.cpp \
	zmRtspSession.cpp \
	zmRtspStream.cpp \
	zmRtpCtrl.cpp \
	zmRtpData.cpp \
	zmRtpSession.cpp

pkginclude_HEADERS = \
	zmHttp.h \
	zmHttpConnection.h \
	zmHttpController.h \
	zmHttpSession.h \
	zmHttpStream.h \
	zmRtmp.h \
	zmRtmpAmf.h \
	zmRtmpConnection.h \
	zmRtmpController.h \
	zmRtmpRequest.h \
	zmRtmpSession.h \
	zmRtmpStream.h \
	zmRtsp.h \
	zmRtspConnection.h \
	zmRtspController.h \
	zmRtspSession.h \
	zmRtspStream.h \
	zmRtpCtrl.h \
	zmRtpData.h \
	zmRtpSession.h
