AUTOMAKE_OPTIONS = foreign

AM_CPPFLAGS = -DDB_COMPDEBUG -Wall -Wno-sign-compare

CLEANFILES = *.rpo

lib_LIBRARIES = \
    libprotocols.a

libprotocols_a_SOURCES = \
	ozHttp.cpp \
	ozHttpConnection.cpp \
	ozHttpController.cpp \
	ozHttpSession.cpp \
	ozHttpStream.cpp \
	ozRtmp.cpp \
	ozRtmpAmf.cpp \
	ozRtmpConnection.cpp \
	ozRtmpController.cpp \
	ozRtmpRequest.cpp \
	ozRtmpSession.cpp \
	ozRtmpStream.cpp \
	ozRtsp.cpp \
	ozRtspConnection.cpp \
	ozRtspController.cpp \
	ozRtspSession.cpp \
	ozRtspStream.cpp \
	ozRtpCtrl.cpp \
	ozRtpData.cpp \
	ozRtpSession.cpp

pkginclude_HEADERS = \
	ozHttp.h \
	ozHttpConnection.h \
	ozHttpController.h \
	ozHttpSession.h \
	ozHttpStream.h \
	ozRtmp.h \
	ozRtmpAmf.h \
	ozRtmpConnection.h \
	ozRtmpController.h \
	ozRtmpRequest.h \
	ozRtmpSession.h \
	ozRtmpStream.h \
	ozRtsp.h \
	ozRtspConnection.h \
	ozRtspController.h \
	ozRtspSession.h \
	ozRtspStream.h \
	ozRtpCtrl.h \
	ozRtpData.h \
	ozRtpSession.h
